Make compatible with our version of Java
Previous code used features in Java 11